Bug 138204 - FILEOPEN: numeric values in bar chart shown as constant string "[cellrange]" instead
Summary: FILEOPEN: numeric values in bar chart shown as constant string "[cellrange]" ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-11-13 23:45 UTC by Gerald Pfeifer
Modified: 2021-08-19 13:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document (1.51 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-11-13 23:45 UTC, Gerald Pfeifer
Details
Screenshot comparing Office 365 (left) and LO 7.1 (right) (142.67 KB, image/png)
2020-11-13 23:46 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2020-11-13 23:45:29 UTC
Created attachment 167289 [details]
Sample document

Looking at the chart in this document, instead of showing number values
in the bar chart are shown as the constant string "[cellrange]" instead.

Expected result: see percentages for every chart segment.

Actual result: see the string "[cellrange]" in every chart segment.

This is with Version: 7.1.0.0.alpha1+
  Build ID: 72056f39e01e36afac36c62988331b6813c8214f
  CPU threads: 8; OS: Linux 5.9; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
  TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-11-13_00:15:11

Version 6.4.8.0.0+ 
  Build ID: 99b065ec31d032fc08ab14f66430dac4fef904a5
  CPU threads: 8; OS: Linux 5.9; UI render: default; VCL: gtk3; 
  TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-6-4, Time: 2020-10-08_08:57:08

and Version: 7.0.4.0.0+
  Build ID: 23839d6ba4b221e7438a98a20dd2023ac0c786e5
  CPU threads: 8; OS: Linux 5.9; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
  TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-0, Time: 2020-11-12_08:42:50

do not show that text nor numbers ... just nothing. 

So in a way this is a regression with 7.1 (since showing the constant
text is worse than showing nothing).  Worth a bi-section?
Comment 1 Gerald Pfeifer 2020-11-13 23:46:08 UTC
Created attachment 167290 [details]
Screenshot comparing Office 365 (left) and LO 7.1 (right)
Comment 2 Attila Baraksó (NISZ) 2020-11-16 07:53:27 UTC
Reproduced in:

Version: 7.1.0.0.alpha1+ (x64)
Build ID: 631974dd958fe4ca1d1f2164266e1e2c81b325ce
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 3 Attila Baraksó (NISZ) 2020-11-16 07:57:11 UTC
Bibisected using linux-64-7.1 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit?id=0d2340998415fb4b2f794054c62ef61c83e32155
author: Balazs Varga <balazs.varga991@gmail.com>
committer: László Németh <nemeth@numbertext.org>
summary: tdf#136061 Chart ODF/OOXML: fix missing custom labels
Comment 4 Commit Notification 2020-11-17 10:10:33 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4930749294475cc28afd06cd11fdf56a157ad9ce

tdf#138204 Chart OOXML Import: doesn't show placeholder

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Gerald Pfeifer 2020-11-17 10:29:30 UTC
(In reply to Commit Notification from comment #4)
> Balazs Varga committed a patch related to this issue.
> It has been pushed to "master":
> 
> https://git.libreoffice.org/core/commit/
> 4930749294475cc28afd06cd11fdf56a157ad9ce

Thank you, Balázs!  Is there an existing bug report tracking this missing
feature (that we could add to "See Also" here, for example)?

Is this feature something you are looking into mid term, or for someone
else to pick up (hopefully)?
Comment 6 Balázs Varga 2020-11-17 12:22:06 UTC
> Thank you, Balázs!  Is there an existing bug report tracking this missing
> feature (that we could add to "See Also" here, for example)?
> 

I didn’t find a report related to this, but it could still be anyway. If we find or create a new one we will add to "See Also".

> Is this feature something you are looking into mid term, or for someone
> else to pick up (hopefully)?

Maybe in the mid term yes, but not in the near future, probably next year.
Comment 7 Gerald Pfeifer 2020-11-23 18:39:13 UTC
(In reply to Balázs Varga from comment #6)
>> Thank you, Balázs!  Is there an existing bug report tracking this missing
>> feature (that we could add to "See Also" here, for example)?
> I didn’t find a report related to this, but it could still be anyway.
> If we find or create a new one we will add to "See Also".

Since I also did not find one, I filed bug #138436.

>> Is this feature something you are looking into mid term[?]
> Maybe in the mid term yes, but not in the near future, probably next year.

Cool, thank you!
Comment 8 NISZ LibreOffice Team 2021-01-05 14:23:31 UTC
Verified in:

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 368c56144aab5794c39d5bc2082d9b3d6d7cebdb
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

Thanks for fixing!