tdf#138204 Chart OOXML Import: doesn't show placeholder

for CELLRANGE data label field type. Add CELLRANGE to enum
com::sun::star::chart2::DataPointCustomLabelFieldType, like
we do at CELLREF, while both of them are not implemented, see
commit 790f9abeb1a1167ad5ab84c5fb855b36669c125b
(tdf#114821 import complex data labels in bar chart).

Regression from commit: 0d2340998415fb4b2f794054c62ef61c83e32155
(tdf#136061 Chart ODF/OOXML: fix missing custom labels)

Change-Id: I8e0f4ca9db6e613a190cbda31504a7542fc13a86