chart2/source/view/charttypes/VSeriesPlotter.cxx
@@ -542,6 +542,7 @@ uno::Reference< drawing::XShape > VSeriesPlotter::createDataLabel( const uno::Re
                         break;
                     }
                     case DataPointCustomLabelFieldType_CELLREF:
+                    case DataPointCustomLabelFieldType_CELLRANGE:
                     {
                         // TODO: for now doesn't show placeholder
                         aTextList[i] = OUString();
