oox/source/drawingml/chart/seriesconverter.cxx
@@ -249,6 +249,8 @@ DataPointCustomLabelFieldType lcl_ConvertFieldNameToFieldEnum( const OUString& r
         return DataPointCustomLabelFieldType::DataPointCustomLabelFieldType_CATEGORYNAME;
     else if (rField == "CELLREF")
         return DataPointCustomLabelFieldType::DataPointCustomLabelFieldType_CELLREF;
+    else if (rField == "CELLRANGE")
+        return DataPointCustomLabelFieldType::DataPointCustomLabelFieldType_CELLRANGE;
     else if (rField == "PERCENTAGE")
         return DataPointCustomLabelFieldType::DataPointCustomLabelFieldType_PERCENTAGE;
     else
